# VRCCompProConnect

./: .gitignore  README.md  apt  docker-compose.yml
vrc-comppro-connect-backend/: .env  Cargo.toml  Dockerfile
vrc-comppro-connect-backend/sqlite-client/: Cargo.toml
vrc-comppro-connect-backend/sqlite-client/src/: main.rs
vrc-comppro-connect-backend/src/: main.rs
vrc-comppro-connect-frontend/: Dockerfile  package-lock.json  package.json
vrc-comppro-connect-frontend/src/: App.js
