

[package]
name = "vrc-comppro-connect-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio"] }
postgres = {version="0.19.5"}
tokio = { version = "1.29.0", features = ["full"] }
dotenv={version="0.15.0"}
serde={version="1.0.171"}
reqwest={version="0.11",features=["json"]}
serde_json = "1.0"