[package]
name = "sqlite-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.7.0", features = ["postgres", "runtime-tokio"] }
postgres = {version="0.19.5"}
dotenv={version="0.15.0"}
chrono={version="0.4.26"}
anyhow={version="1.0.71"}
tokio={version="1.29.0", features = ["full"]}